Prevented the shop from shifting when the size of the cat changes.

--- a/clickercss.css
+++ b/clickercss.css
@@ -12,6 +12,10 @@ main {
   background-color: #ffb3ff;
 }
 
+#UI {
+  height: 200px;
+}
+
 #shop {
   position: relative;
   padding: 10px;
